<resources>
    <string name="app_name">Unit5Project</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="bmi_calculator">BMI Calculator</string>
    <string name="bmi_api">BMI API</string>
    <string name="calculate_bmi">Calculate BMI</string>
    <string name="enter_height">Enter Height:</string>
    <string name="enter_weight">Enter Weight:</string>
    <string name="inches">inches</string>
    <string name="lbs">lbs</string>
    <string name="message">Message</string>
    <string name="bmi">BMI:</string>
    <string name="bmi_score">BMI Score</string>
    <string name="this_is_a_test">This is a test</string>
    <string name="educate_me">Educate Me</string>
    <string name="call_bmi_api">Call BMI API</string>
</resources>