<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/educate_btn"
        android:layout_width="150dp"
        android:layout_height="65dp"
        android:layout_marginStart="11dp"
        android:layout_marginLeft="11dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="50dp"
        android:background="#881818"
        android:text="@string/educate_me"
        android:textColor="#FFC107"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/api_call_btn"
        tools:text="Educate Me" />

    <Button
        android:id="@+id/api_call_btn"
        android:layout_width="150dp"
        android:layout_height="65dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginBottom="50dp"
        android:background="#881818"
        android:text="@string/call_bmi_api"
        android:textColor="#FFC107"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="Call BMI API" />

    <TextView
        android:id="@+id/height_label_api"
        android:layout_width="155dp"
        android:layout_height="32dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="33dp"
        android:text="@string/enter_height"
        android:textColor="#881818"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header_label_api"
        tools:text="Enter Height:" />

    <TextView
        android:id="@+id/weight_label_api"
        android:layout_width="156dp"
        android:layout_height="29dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="35dp"
        android:text="@string/enter_weight"
        android:textColor="#881818"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/height_label_api"
        tools:text="Enter Weight:" />

    <TextView
        android:id="@+id/header_label_api"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="150dp"
        android:layout_marginRight="150dp"
        android:text="@string/bmi_api"
        android:textColor="#FFC107"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="BMI API" />

    <EditText
        android:id="@+id/height_num_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/inches"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/height_label_api"
        app:layout_constraintTop_toBottomOf="@+id/header_label_api" />

    <EditText
        android:id="@+id/weight_num_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/lbs"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/weight_label_api"
        app:layout_constraintTop_toBottomOf="@+id/height_num_field" />

    <TextView
        android:id="@+id/bmi_api_label"
        android:layout_width="86dp"
        android:layout_height="35dp"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginBottom="200dp"
        android:text="@string/bmi"
        android:textColor="#881818"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/api_call_btn"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="BMI:" />

    <TextView
        android:id="@+id/bmi_score_api_label"
        android:layout_width="112dp"
        android:layout_height="36dp"
        android:layout_marginEnd="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginBottom="200dp"
        android:text="@string/bmi_score"
        android:textColor="#881818"
        android:textSize="24sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/api_call_btn"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="BMI Score" />

    <TextView
        android:id="@+id/message_api_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="85dp"
        android:text="@string/message"
        android:textColor="#881818"
        android:textSize="24sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/api_call_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="Message" />

</androidx.constraintlayout.widget.ConstraintLayout>